apps/o11y/ingress/grafana-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-https
  namespace: o11y
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.i.recompiled.org`)
      services:
        - name: grafana
          port: 80
  tls:
    secretName: grafana-tls
