apps/o11y/ingress/loki-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: o11y
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.i.recompiled.org`)
      kind: Rule
      services:
        - name: loki
          port: 3100
      middlewares:
        - name: basic-auth
          namespace: auth
  tls:
    secretName: loki-tls
