apps/o11y/ingress/metrics-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics
  namespace: o11y
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: metrics
      sectionName: metrics
  hostnames:
    - metrics.i.recompiled.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mimir-gateway
          port: 8080
