apps/o11y/ingress/thanos-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-ingressroute
  namespace: o11y
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`thanos.i.recompiled.org`)
      kind: Rule
      services:
        - name: thanos-query
          port: 10902
  tls:
    secretName: thanos-tls
